<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    tools:context=".RegistrationActivity">

    <ImageView
        android:id="@+id/profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:background="@drawable/round_background"
        android:padding="15dp"
        android:src="@drawable/ic_baseline_person_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dimen_150">

        <androidx.cardview.widget.CardView
            android:layout_margin="64dp"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardElevation="8dp"
            app:cardCornerRadius="15dp"
            app:cardMaxElevation="12dp"
            android:background="#fff">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/registration_title"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/email"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/email_reg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/ed1"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/login_form_password"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/password_reg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ed2"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_reg"
                    android:layout_width="200dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_sign_button"
                    android:text="@string/signup"
                    android:textColor="@color/white"
                    android:layout_marginTop="20dp"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/signin_here"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0"
                    android:padding="5dp"
                    android:text="@string/signin_here"
                    android:onClick="onClick3"
                    android:textColor="#FF0000"
                    android:textSize="15sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>
